--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
-<!DOCTYPE html>
+<!-- CSS Stylesheets with Relative Paths -->
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
+
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+  <meta charset="UTF-8">
+  <title>CSS Stylesheets with Relative Paths</title>
+
+  <!-- This line is money! It points your HTML to the CSS file. -->
+  <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
+  <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
+  <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+
 </head>
+
 <body>
+  <header>
+        <div class="nameBox">
+        <h1>Drew Radley</h1>
+        </div>
+  </header>
+
+  <div class="container">
+
+    <section id="main-bio">
+
+      <h2>Bob Smith</h2>
+
+      <img id="bio-image"src="https://lastfm-img2.akamaized.net/i/u/770x0/091af844db5f4c7b9801e1322f18397a.jpg"alt="Photo of Bob Smith"style="width:150px;height:200px;">
+
+      <p>Bob Smith is an English singer, songwriter and musician. He is the lead singer, guitarist, multi instrumentalist, lyricist, principal songwriter and only consistent member of the rock band the Cure, which he co-founded in 1976. He was also the lead guitarist for the band Siouxsie and the Banshees from 1982 to 1984 and was part of the short-lived group the Glove in 1983. Smith is known for his distinctive voice and unique stage look, the latter of which was influential on the goth subculture that rose to prominence in the 1980s.</p>
+    </section>
+
+    <section id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+           <li><strong>Email: </strong><u><a href="mailto: drewradley@gmail.com">drewradley@gmail.com</a></u></li>
+            <li><strong>Website: </strong><a href="http://www.drewradley.com">www.drewradley.com</a></li>
+            <li><strong>Github: </strong><a href="#">Coming Soon</a>
+      </ul>
+    </section>
+  </div>
 
 </body>
+
 </html>
